# ft_trancendence

./: .gitignore  LICENSE  README.md
api-spec/: rest.yml  websockets.yml
srcs/backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  entrypoint.sh  pyproject.toml
srcs/backend/app/: main.py
srcs/backend/transcendence_backend/: entry-eval.sh  entry.sh
srcs/backend/transcendence_backend/Chat/: models.py  urls.py  views.py
srcs/backend/transcendence_backend/NotFrontend/: apps.py  urls.py  views.py
srcs/backend/transcendence_backend/NotFrontend/static/: login.js  signUp.js
srcs/backend/transcendence_backend/NotFrontend/templates/: dashboard.html  index.html  unknown_user.html
srcs/backend/transcendence_backend/Users/: forms.py  models.py  urls.py  views.py
srcs/backend/transcendence_backend/Users/views/: user_views.py
srcs/backend/transcendence_backend/authorize/: urls.py  views.py
srcs/backend/transcendence_backend/chat/: consumers.py  models.py  routing.py  services.py  urls.py  views.py
srcs/backend/transcendence_backend/cors_middleware/: apps.py  conf.py
srcs/backend/transcendence_backend/jwt/: __init__.py  jwt.py
srcs/backend/transcendence_backend/oauth2/: urls.py  views.py
srcs/backend/transcendence_backend/pong/: consumers.py  middlewares.py  models.py  routing.py  services.py  urls.py  views.py
srcs/backend/transcendence_backend/stats/: models.py  services.py  urls.py  views.py
srcs/backend/transcendence_backend/tournament/: consumers.py  middlewares.py  models.py  services.py  urls.py  views.py
srcs/backend/transcendence_backend/transcendence_backend/: asgi.py  cors_middleware.py  decorators.py  settings.py  totp.py  urls.py  wsgi.py
srcs/backend/transcendence_backend/users/: services.py  urls.py
srcs/cli/: __init__.py  cli.py  client.py  game.py  package_build.sh  pyproject.toml  user.py  utils.py
srcs/cli/src/transcendence_cli/: cli.py  client.py  game.py  menu.py  messages.py  user.py  utils.py
(+146 files in other folders)
