[tool.poetry]
name = "app"
version = "0.1.0"
description = "Transcendece Backend API"
authors = ["valmpanis <vasilisampanis@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
