[tool.poetry]
name = "transcendence-backend"
version = "0.1.0"
description = "Backend API for ft_transcendence"
authors = ["valmpani <vasilisalmpanis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
daphne = "^4.1.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
channels-redis = "^4.2.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
